message User {
    required string username = 1;
    required string password = 2;
    required uint32 is_admin = 3;
    required string token = 4;
    repeated Article articles = 5;
}
message Article {
    required uint32 id = 1;
    required string title= 2;
    required string content = 3;
}

message UserResponse {
    required uint32 is_admin = 1;
    required string token = 2;
    repeated Article articles =3;
}
message LoginRequest {
    required string username = 1;
    required string password = 2;
    
}